...
                }
            }
            .buttonStyle(self.constants.errorView.buttonStyle)
        }
    }
    struct Accessibility {
        let element: String = "recipes_list.element"
        let filterButton: String = "recipes_list.filter_button"
    }
}

struct HomeViewConstants {
    struct StatusView {
        let loadingText: String = "Loading recipes..."
...
