...
                }
            }
        }
    }
    
    struct Accessibility {
        let title = "details_view.title"
    }
}

struct DetailViewConstants {
    struct Image {
        let height: CGFloat = 250
...
        let infoItemTitleFont: Font = .caption
    }
    
    struct Colors {
        let starIcon: Color = .yellow
        let difficultyEasy: Color = .green
        let difficultyMedium: Color = .orange
        let difficultyHard: Color = .red
        let difficultyDefault: Color = .gray
        let instructionCircle: Color = .blue
        let secondaryText: Color = .secondary
        let tagBackground: Color = .gray.opacity(0.2)
    }
...
