...
            }
        }
    }
    struct Accessibility {
        let difficulty = "filter_view.difficulty"
        let rating = "filter_view.rating"
        let applyButton = "filter_view.apply_button"
    }
}


struct FilterViewConstants {
    struct Layout {
...
